syntax = "proto3";

option go_package = "github.com/IvanVojnic/bandEFnotif/proto";

package friends;

service friends {
  rpc StorageFriendsRequest(StorageFriendsRequestReq) returns (StorageFriendsRequestResp){}
}

message StorageFriendsRequestReq {
  User userSender = 1;
  User userReceiver = 2;
}

message StorageFriendsRequestResp {

}

message User {
  string userID = 1;
  string userName = 2;
  string userEmail = 3;
}